tests/e2e/fail/extern_empty_dll.ep
# COMPILE_ERROR: extern 'EmptyDllExtern' requires a non-empty DLL name
extern "" fun EmptyDllExtern(): i32

fun main(): void {
}
